Correct gap in hero section v 1.2

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -97,6 +97,7 @@ body {
 
   .hero {
     padding-block: 4.5rem;
+    gap: 1.5rem;
   }
   .hero > p {
     padding-right: 1.875rem;
